# Algorithms-and-Data-Structures

./: .gitignore  README.md
C/: .gitignore  CMakeLists.txt  README.md
C/Array/: README.md
C/Array/ADT/: README.md
C/Array/ADT/ArrayOpsLibShared/: CMakeLists.txt  compile.sh
C/Array/ADT/ArrayOpsLibShared/include/: ArrayOperations.h
C/Array/ADT/ArrayOpsLibShared/src/: ArrayOperations.c
C/Array/ADT/Delete/: CMakeLists.txt
C/Array/ADT/Display/: CMakeLists.txt
C/Array/ADT/Insert/: CMakeLists.txt
C/Array/ADT/Linear-Search/: CMakeLists.txt
C/Array/ADT/Quiz/: README.md
C/Array/ADT/UsesArrayOpsLib/GetSetMaxMinSum/: CMakeLists.txt
C/Array/ADT/UsesArrayOpsLib/GetSetMaxMinSum/src/: main.c
C/Array/Representations/: README.md
C/Array/Representations/2DArray/: CMakeLists.txt  run.sh
C/Array/Representations/ArrayDeclaration/: CMakeLists.txt
C/Array/Representations/ArrayRepQuiz/: README.md
C/Array/Representations/IncreaseArraySize/: CMakeLists.txt
C/Array/Representations/StaticDynamic/: CMakeLists.txt
C/Backup/Array/ADT/: README.md
C/Backup/Essentials/: README.md
C/Backup/Essentials/Parameter-Passing-Methods/: main.c
C/Essentials/: README.md
C/Essentials/Array/: CMakeLists.txt  compile.sh
C/Essentials/Array-As-Parameter/: CMakeLists.txt
C/Essentials/Functions/: CMakeLists.txt
C/Essentials/HelloWorld/: CMakeLists.txt  clean.sh  compile.sh  hello  run.sh
C/Essentials/Parameter-Passing-Methods/: CMakeLists.txt
C/Essentials/Pointer-To-Structures/: CMakeLists.txt
C/Essentials/Pointers/: CMakeLists.txt
C/Essentials/Structure-As-Parameter/: CMakeLists.txt
C/Essentials/Structures/: CMakeLists.txt
C/Essentials/Structures-and-Functions/: CMakeLists.txt
C/Recursion/: README.md
C/Recursion/Combination/: CMakeLists.txt
C/Recursion/Factorial/: CMakeLists.txt
C/Recursion/Fibonacci/: CMakeLists.txt
C/Recursion/HornersRuleTS/: CMakeLists.txt
C/Recursion/Indirect/: CMakeLists.txt
C/Recursion/Nested/: CMakeLists.txt
C/Recursion/Power/: CMakeLists.txt
C/Recursion/Quiz/: README.md
C/Recursion/StaticGlobal/: CMakeLists.txt
C/Recursion/SumOfNatNum/: CMakeLists.txt
C/Recursion/TailHead/: CMakeLists.txt
C/Recursion/TaylorSeries/: CMakeLists.txt
C/Recursion/TowerOfHanoi/: CMakeLists.txt
C/Recursion/Tree/: CMakeLists.txt
C/Strings/: README.md
C/Strings/StringOpsLibShared/: CMakeLists.txt  info.sh  install.sh
C/Strings/StringOpsLibShared/include/: StringOperations.h
C/Strings/StringOpsLibShared/src/: StringOperations.c
C/Strings/UsesStringOpsLib/ValidateString/: CMakeLists.txt
C/Strings/UsesStringOpsLib/ValidateString/src/: main.c
CPP/: .gitignore
CPP/Array/ADT/ArrayOpsLibShared/: CMakeLists.txt  compile.sh  info.sh  install.sh
CPP/Array/ADT/ArrayOpsLibShared/include/: ArrayOperations.h
CPP/Array/ADT/ArrayOpsLibShared/src/: ArrayOperations.cpp
CPP/Array/ADT/UsesArrayOpsLib/MenuDriver/: CMakeLists.txt
CPP/Array/ADT/UsesArrayOpsLib/MenuDriver/src/: main.cpp
CPP/Cheatsheet/: README.md
CPP/Essentials/: README.md
CPP/Essentials/Array/: clean.sh
CPP/Essentials/Array-As-Parameter/: CMakeLists.txt
CPP/Essentials/Converting-C-to-CPP-Class/: CMakeLists.txt
CPP/Essentials/Functions/: CMakeLists.txt
CPP/Essentials/Parameter-Passing-Methods/: CMakeLists.txt
CPP/Essentials/Pointer-To-Structure/: CMakeLists.txt
CPP/Essentials/Pointers/: CMakeLists.txt
CPP/Essentials/Structure-As-Parameter/: CMakeLists.txt
CPP/Essentials/Structures/: CMakeLists.txt  run.sh
CPP/Essentials/Structures-and-Functions/: CMakeLists.txt
CPP/Essentials/Structures-and-Functions/src/: main.cpp
CPP/Essentials/Template-Classes/: CMakeLists.txt  compile.sh
Java/Essentials/: README.md
JavaScript/: README.md
JavaScript/Essentials/Array/: webpack.config.js
Python/: .gitignore
Python/Essentials/: README.md
Python/Essentials/Array/: CMakeLists.txt  README.md
Python/Essentials/Array-As-Parameter/: CMakeLists.txt  README.md  run.sh
Python/Essentials/Converting-C-to-Py-Class/: CMakeLists.txt  README.md
Python/Essentials/Functions/: CMakeLists.txt  README.md
Python/Essentials/Parameter-Passing-Methods/: CMakeLists.txt  README.md
Python/Essentials/Pointer-To-Structure/: CMakeLists.txt  README.md
Python/Essentials/Pointers/: CMakeLists.txt  README.md  main.py
Python/Essentials/Structure-As-Parameter/: CMakeLists.txt  README.md
Python/Essentials/Structures/: CMakeLists.txt  README.md  clean.sh
Python/Essentials/Structures-and-Functions/: CMakeLists.txt  README.md
projects/CPP/Essentials/: Makefile  README.md
projects/JavaScript/: README.md
projects/Python/Essentials/: Makefile  README.md
(+193 files in other folders)
